# cicici

./: .gitignore  .gitmodules  CMakeLists.txt
contrib/: CMakeLists.txt
src/: Makefile  main.cc  test.sh
test/: test.sh
